--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"bin": {
 		"imcrypt": "index.js"
 	},
-	"author": "theninza <niks.a3198@gmail.com> (https://theninza.me)",
+	"author": "Sarthak",
 	"keywords": [
 		"imcrypt",
 		"theninza",
@@ -41,10 +41,10 @@
 	"main": "index.js",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/TheNinza/imcrypt.git"
+		"url": "git+https://github.com/sarthaks24/ImageEncryption.git"
 	},
 	"bugs": {
-		"url": "https://github.com/TheNinza/imcrypt/issues"
+		"url": "htps://github.com/sarthaks24/ImageEncryption/issues"
 	},
-	"homepage": "https://github.com/TheNinza/imcrypt#readme"
+	"homepage": "https://github.com/sarthaks24/ImageEncryption#readme"
 }
